[gd_scene load_steps=56 format=3 uid="uid://djhhur3atlogy"]

[ext_resource type="Script" uid="uid://bu5tk16c4gvd1" path="res://Scripts/player.gd" id="1_xhfnw"]
[ext_resource type="Texture2D" uid="uid://dc7fk5rxqeedf" path="res://Assets/characters/player.png" id="2_kne1u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vjad"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt0h1"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd78s"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ictha"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jgrc"]
atlas = ExtResource("2_kne1u")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wy67"]
atlas = ExtResource("2_kne1u")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q26ax"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p01ps"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7dl7"]
atlas = ExtResource("2_kne1u")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_48og4"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmpta"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrbh7"]
atlas = ExtResource("2_kne1u")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgsek"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pi4m"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg6sq"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h84ma"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_47wu6"]
atlas = ExtResource("2_kne1u")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n1s8"]
atlas = ExtResource("2_kne1u")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpjcp"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kne1u"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e80uo"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxr5p"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdg3f"]
atlas = ExtResource("2_kne1u")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtqjt"]
atlas = ExtResource("2_kne1u")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ncpa"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi0c6"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp6x6"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tkgg"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ohk"]
atlas = ExtResource("2_kne1u")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oudfo"]
atlas = ExtResource("2_kne1u")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6rpx"]
atlas = ExtResource("2_kne1u")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3kul"]
atlas = ExtResource("2_kne1u")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jatw7"]
atlas = ExtResource("2_kne1u")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv870"]
atlas = ExtResource("2_kne1u")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efikj"]
atlas = ExtResource("2_kne1u")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_itxgx"]
atlas = ExtResource("2_kne1u")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ncpa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": true,
"name": &"attackDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"attackUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"attackX",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vjad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt0h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd78s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ictha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jgrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wy67")
}],
"loop": true,
"name": &"idleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q26ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p01ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7dl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48og4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrbh7")
}],
"loop": true,
"name": &"idleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgsek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pi4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg6sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h84ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47wu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n1s8")
}],
"loop": true,
"name": &"idleX",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpjcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kne1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e80uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxr5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdg3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtqjt")
}],
"loop": true,
"name": &"runDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi0c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp6x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tkgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ohk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oudfo")
}],
"loop": true,
"name": &"runUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6rpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3kul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jatw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv870")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efikj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itxgx")
}],
"loop": true,
"name": &"runX",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcp"]
size = Vector2(72, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(88, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6t5aa"]
size = Vector2(78, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgqql"]
size = Vector2(42, 80)

[node name="Player" type="CharacterBody2D"]
position = Vector2(1, -1)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_xhfnw")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -75)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_5ncpa")
animation = &"attackX"
frame_progress = 0.450223

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 29)
shape = SubResource("RectangleShape2D_kpjcp")

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(3, 33)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="hurtBoxDown" type="Area2D" parent="." groups=["hurtBox"]]
position = Vector2(-23, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBoxDown"]
position = Vector2(23, 101)
shape = SubResource("RectangleShape2D_6t5aa")
disabled = true

[node name="hurtBoxUp" type="Area2D" parent="." groups=["hurtBox"]]
position = Vector2(-23, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBoxUp"]
position = Vector2(22, -75)
shape = SubResource("RectangleShape2D_6t5aa")
disabled = true

[node name="hurtBoxLeft" type="Area2D" parent="." groups=["hurtBox"]]
position = Vector2(-23, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBoxLeft"]
position = Vector2(-66, 13)
shape = SubResource("RectangleShape2D_vgqql")
disabled = true

[node name="hurtBoxRight" type="Area2D" parent="." groups=["hurtBox"]]
position = Vector2(-23, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBoxRight"]
position = Vector2(110, 13)
shape = SubResource("RectangleShape2D_vgqql")
disabled = true

[connection signal="area_entered" from="hitBox" to="." method="_on_hit_box_area_entered"]
